--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,21 @@ h1 {
     text-shadow: 2px 2px 4px #000000;
 }
 
+.crystals {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.crystal {
+    border: 1px solid red;
+    height: 150px;
+    width: 150px;
+}
+
+
+/***
 .win,
 .loss {
     text-align: center;
@@ -29,10 +44,6 @@ h1 {
     text-shadow: 2px 2px 4px #000000;
 }
 
-.crystals {
-    text-align: center;
-    margin-top: 100px;
-}
 
 .card-body {
     text-align: center;
@@ -50,4 +61,4 @@ p {
 
 .rules {
     padding-top: 50px;
-}
+}***/
