--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ h1 {
 
 .crystals {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     margin-top: 100px;
 }
@@ -33,6 +33,10 @@ h1 {
     border: 1px solid red;
     height: 150px;
     width: 150px;
+}
+
+img {
+    width: 50px;
 }
 
 
