--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../images/bg-signup.jpg");
+    background-image: url("../images/1305670599-black-trees-dark-forest-path-shadows-spooky-monochrome-wallpaper-wallpaper.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -31,16 +31,18 @@ h1 {
 }
 
 .crystal {
-    height: 150px;
-    width: 150px;
+    height: 125px;
+    width: 125px;
     margin-left: 30px;
     cursor: pointer;
+    margin-bottom: 50px;
+    border-radius: 75px;
 }
 
 .crystal:hover {
-    -moz-box-shadow: 0 0 10px #ccc;
-    -webkit-box-shadow: 0 0 10px #ccc;
-    box-shadow: 0 0 10px #ccc;
+    -moz-box-shadow: 0 0 10px #000;
+    -webkit-box-shadow: 0 0 10px #000;
+    box-shadow: 0 0 10px #000;
 }
 
 #numToguess,
@@ -50,4 +52,12 @@ h1 {
     font-size: 30px;
     text-align: center;
     text-shadow: 2px 2px 4px #000000;
+}
+
+#rules {
+    font-family: 'Merriweather', serif;
+    font-size: 16px;
+    line-height: 3em;
+    text-shadow: 2px 2px 4px #000000;
+    margin-bottom: 50px;
 }
